--- a/src/templates/users_list.html
+++ b/src/templates/users_list.html
@@ -2,7 +2,7 @@
 <html lang="en-US" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <title>Car List</title>
+    <title>User List</title>
     <link rel="stylesheet" crossorigin="anonymous"
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" >
 
@@ -10,32 +10,32 @@
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" >
 	</script>
 </head>
-<h1>CAR LIST</h1>
+<h1>USER LIST</h1>
 <table class="table">
     <thead>
         <tr>
         <th scope="col">Id</th>
         <th scope="col">Name</th>
         <th scope="col">Year</th>
-        <th scope="col">Price</th>
+        <th scope="col">Salary</th>
         <th scope="col">Edit</th>
         <th scope="col">Delete</th>
         </tr>
     </thead>
     <tbody>
-        {% for car in cars %}
+        {% for user in users %}
             <tr>
-                <td>{{ car.id }}</th>
-                <td>{{ car.name }}</td>
-                <td>{{ car.year }}</td>
-                <td>{{ car.price }}</td>
-                <td><a href='update/{{ car.id }}'>Edit</a></td>
-                <td><a href='delete/{{ car.id }}'>Delete</a></td>
+                <td>{{ user.id }}</th>
+                <td>{{ user.name }}</td>
+                <td>{{ user.year }}</td>
+                <td>{{ user.salary }}</td>
+                <td><a href='update/{{ user.id }}'>Edit</a></td>
+                <td><a href='delete/{{ user.id }}'>Delete</a></td>
             </tr>
         {% endfor %}
     </tbody>
 </table>
 
-<a class="btn btn-primary" href="add">Add New Car</a>
+<a class="btn btn-primary" href="add">Add New User</a>
 
 </html>
