nginx 5.35.83.245/flask_mongo_app

--- a/src/templates/user_details.html
+++ b/src/templates/user_details.html
@@ -33,6 +33,6 @@
             <input type="text" class="form-control" name="salary" id="salary" value="{{user.salary}}">
         </div>
         <button type="btnAdd" class="btn btn-primary">Submit</button>
-        <a href="/" class="btn btn-primary">Cancel</a>
+        <a href="{{ prefix }}" class="btn btn-primary">Cancel</a>
       </form>
 </body>
